# tinycc

./: .gitignore  .tcc.bat  .tccVar.bat  .tccVar32.bat  .winvar.bat  CMakeLists.txt  Changelog  Makefile  README.md  arm-asm.c  arm-gen.c  arm-link.c  arm-tok.h  arm64-asm.c  arm64-gen.c  c67-gen.c  cmake_env.bat.in  cmake_env.sh.in  cmake_tcc  cmake_tcc.bat  config.h  config.h.in  configure  cthread.c  i386-asm.c  i386-gen.c  il-gen.c  libtcc.c  riscv64-asm.c  riscv64-gen.c  riscv64-link.c  rpmalloc.h  tcc.c  tcc.cmake  tcc.h  tcc_prompt  tcc_prompt.bat  tccasm.c  tccdbg.c  tccelf.c  (+11 more)
.github/workflows/: build.yml  centos.yml  cmake.yml  platforms.yml  release.yml
examples/: ex6.c
include/: catomic.h  cmalloc.h  cthread.h  float.h  iso646.h  stddef.h  tccdefs.h  thrd.h
lib/: Makefile  alloca-bt.S  alloca.S  armeabi.c  atomic.S  bcheck.c  libtcc1.c  run_nostdlib.c  runmain.c  tcov.c
src/: tcc.c  tcc.h  tccgen.c  tccpe.c  tccrun.c  x86_64-gen.c
src/lib/: bcheck.c
src/threads/: cmalloc.c  rpmalloc.c
src/win32/include/: assert.h  atomic.h  dlfcn.h  tccdefs.h
src/win32/include/tcc/: tcc_libm.h
src/win32/include/winapi/: d3d.h  d3d8.h  d3d9.h
src/win32/lib/: crt1.c  dlfcn.c  wincrt1.c
tests/: CMakeLists.txt  Makefile  boundtest.c  libtcc_test.c  tcctest.c
tests/cc/: CMakeLists.txt  align.c  arith.c  control.c  float.c  initializer.c  lex.c  literal.c  macro.c  number.c  oldstyle.c  pointer.c  sizeof.c  struct.c  type.c  usualconv.c  varargs.c
tests/dll/: CMakeLists.txt  testdll.c
tests/dltests/: CMakeLists.txt  test-cthread.c  test.c  testdll2.c  testdll3.c
tests/tests2/: 101_cleanup.c  101_cleanup.expect  125_atomic_misc.c  128_run_atexit.c  129_scopes.c  129_scopes.expect  133_old_func.c  133_old_func.expect  136_atomic_gcc_style.c  136_atomic_gcc_style.expect  39_typedef.c  39_typedef.expect  60_errors_and_warnings.c  60_errors_and_warnings.expect  Makefile
tests/thiscall/: thiscall-test.c
tests/thread/: CMakeLists.txt  pool-test_heavy.c  pool-test_shutdown.c  pool-test_wait.c  test-atomicity.c  test-cthread.c  test-thread_local.c  test_pool-heavy.c  test_pool-shutdown.c  thread-tls.c
threads/: cmalloc.c  cthread.c  cthread_pool.c  rpmalloc.c
win32/include/: config.h  pthread.h  sched.h  unistd.h
win32/include/winapi/: d3d.h  d3d8.h  d3d9.h  dxtmpl.h  objbase.h  winapifamily.h  winbase.h  wspiapi.h
win32/lib/: crt1.c  wincrt1.c
win32/pthreads4w/: CMakeLists.txt  config.h  implement.h  pthread.h
win32/pthreads4w/cmake/: get_version.cmake
